<resources>
    <string name="app_name">Character Soup</string>
    <string name="title">Character Soup</string>
    <string name="home_title">Home</string>
    <string name="new_title">New</string>
    <string name="ogl_title">Open Game Licence</string>
    <string name="search_title">Search</string>
    <string name="open_title">Open</string>
    <string name="delete_title">Delete</string>
    <string name="update_title">Patch notes</string>
    <string name="message_button">Got it!</string>
    <string name="ov_level">Level</string>
    <string name="ov_xp">Experience</string>
    <string name="ov_hp">Hit points</string>
    <string name="ov_ac">Armor class</string>
    <string name="ov_mab">Melee Attack bonus</string>
    <string name="ov_rab">Ranged Attack bonus</string>
    <string name="ov_cmb">CMB</string>
    <string name="ov_cmd">CMD</string>
    <string name="ov_fort_save">Fortitude save</string>
    <string name="ov_ref_save">Reflex save</string>
    <string name="ov_will_save">Willpower save</string>
    <string name="ov_initiative">Initiative bonus</string>
    <string name="info_money">Copper pieces</string>
    <string name="info_xp">Experience</string>
    <string name="info_button">Change</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="stat_cha">CHA</string>
    <string name="stat_con">CON</string>
    <string name="stat_dex">DEX</string>
    <string name="stat_int">INT</string>
    <string name="stat_str">STR</string>
    <string name="stat_wis">WIS</string>
    <string-array name="stats">
        <item>CHA</item>
        <item>CON</item>
        <item>DEX</item>
        <item>INT</item>
        <item>STR</item>
        <item>WIS</item>
    </string-array>
    <string-array name="drawer_items_strings">
        <item>Overview</item>
        <item>Attributes</item>
        <item>Skills</item>
        <item>Feats</item>
        
        <item>Inventory</item>
        <item>Character Info</item>
    </string-array>
    <string-array name="skill_names">
        <item>Acrobatics</item>
        <item>Appraise</item>
        <item>Bluff</item>
        <item>Climb</item>
        <item>Craft</item>
        <item>Diplomacy</item>
        <item>Disable Device</item>
        <item>Disguise</item>
        <item>Escape Artist</item>
        <item>Fly</item>
        <item>Handle Animal</item>
        <item>Heal</item>
        <item>Intimidate</item>
        <item>Knowledge (Arcana)</item>
        <item>Knowledge (Dungeoneering)</item>
        <item>Knowledge (Engineering)</item>
        <item>Knowledge (Geography)</item>
        <item>Knowledge (History)</item>
        <item>Knowledge (Local)</item>
        <item>Knowledge (Nature)</item>
        <item>Knowledge (Nobility)</item>
        <item>Knowledge (Planes)</item>
        <item>Knowledge (Religion)</item>
        <item>Linguistics</item>
        <item>Perception</item>
        <item>Perform</item>
        <item>Profession</item>
        <item>Ride</item>
        <item>Sense Motive</item>
        <item>Sleight of Hand</item>
        <item>Spellcraft</item>
        <item>Stealth</item>
        <item>Survival</item>
        <item>Swim</item>
        <item>Use Magic Device</item>
    </string-array>
    <string name="title_activity_ogl">OglActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_character">CharacterActivity</string>
    <string name="portraitContent">portrait</string>
    <string name="character_dialog">Create character</string>
    <string name="character_name">Character name</string>
    <string-array name="races">
        <item >Dwarf</item>
        <item >Elf</item>
        <item >Gnome</item>
        <item >Half Elf</item>
        <item >Halfling</item>
        <item >Half Orc</item>
        <item >Human</item>
    </string-array>
   	<string-array name="classes">
        <item >Barbarian</item>
        <item >Bard</item>
        <item >Cleric</item>
        <item >Druid</item>
        <item >Fighter</item>
        <item >Monk</item>
        <item >Paladin</item>
        <item >Ranger</item>
        <item >Rogue</item>
        <item >Sorcerer</item>
        <item >Wizard</item>
    </string-array>
    <string-array name="per_level">
        <item >One extra hitpoint</item>
        <item >One extra skill rank</item>
    </string-array>
    <string name="per_level_text">The first level get:</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="header_1">Ability</string>
    <string name="header_2">Score</string>
    <string name="header_3">Mod</string>
    <string name="header_4">Temp Score</string>
    <string name="header_5">Temp Mod</string>
    <string name="header_6">Racial Mod</string>
    <string name="available_skill_ranks">Available skill ranks</string>
    <string name="add_feat">Add feat</string>
    <string-array name="feat_names">
        <item>Acrobatic</item>
		<item>Acrobatic Steps</item>
		<item>Agile Maneuvers</item>
		<item>Alertness</item>
		<item>Alignment Channel</item>
		<item>Animal Affinity</item>
		<item>Arcane Armor Mastery</item>
		<item>Arcane Armor Training</item>
		<item>Arcane Strike</item>
		<item>Armor Proficiency, Heavy</item>
		<item>Armor Proficiency, Light</item>
		<item>Armor Proficiency, Medium</item>
		<item>Athletic</item>
		<item>Augment Summoning</item>
		<item>Bleeding Critical</item>
		<item>Blind-Fight</item>
		<item>Blinding Critical</item>
		<item>Brew Potion</item>
		<item>Catch Off-Guard</item>
		<item>Channel Smite</item>
		<item>Cleave</item>
		<item>Combat Casting</item>
		<item>Combat Expertise</item>
		<item>Combat Reflexes</item>
		<item>Command Undead</item>
		<item>Craft Magic Arms and Armor</item>
		<item>Craft Rod</item>
		<item>Craft Wand</item>
		<item>Craft Staff</item>
		<item>Craft Wondrous Item</item>
		<item>Critical Focus</item>
		<item>Critical Mastery</item>
		<item>Dazzling Display</item>
		<item>Deadly Aim</item>
		<item>Deadly Stroke</item>
		<item>Deafening Critical</item>
		<item>Deceitful</item>
		<item>Defensive Combat Training</item>
		<item>Deflect Arrows</item>
		<item>Deft Hands</item>
		<item>Diehard</item>
		<item>Disruptive</item>
		<item>Dodge</item>
		<item>Double Slice</item>
		<item>Elemental Channel</item>
		<item>Empower Spell</item>
		<item>Endurance</item>
		<item>Enlarge Spell</item>
		<item>Eschew Materials</item>
		<item>Exhausting Critical</item>
		<item>Exotic Weapon Proficiency</item>
		<item>Extend Spell</item>
		<item>Extra Channel</item>
		<item>Extra Ki</item>
		<item>Extra Lay On Hands</item>
		<item>Extra Mercy</item>
		<item>Extra Performance</item>
		<item>Extra Rage</item>
		<item>Far Shot</item>
		<item>Fleet</item>
		<item>Forge Ring</item>
		<item>Gorgon\'s Fist</item>
		<item>Great Cleave</item>
		<item>Great Fortitude</item>
		<item>Greater Bull Rush</item>
		<item>Greater Disarm</item>
		<item>Greater Feint</item>
		<item>Greater Grapple</item>
		<item>Greater Overrun</item>
		<item>Greater Penetrating Strike</item>
		<item>Greater Shield Focus</item>
		<item>Greater Spell Focus</item>
		<item>Greater Spell Penetration</item>
		<item>Greater Sunder</item>
		<item>Greater Trip</item>
		<item>Greater Two-Weapon Fighting</item>
		<item>Greater Vital Strike</item>
		<item>Greater Weapon Focus</item>
		<item>Greater Weapon Specialization</item>
		<item>Heighten Spell</item>
		<item>Improved Bull Rush</item>
		<item>Improved Channel</item>
		<item>Improved Counterspell</item>
		<item>Improved Critical</item>
		<item>Improved Disarm</item>
		<item>Improved Familiar</item>
		<item>Improved Feint</item>
		<item>Improved Grapple</item>
		<item>Improved Great Fortitude</item>
		<item>Improved Initiative</item>
		<item>Improved Iron Will</item>
		<item>Improved Lightning Reflexes</item>
		<item>Improved Overrun</item>
		<item>Improved Precise Shot</item>
		<item>Improved Shield Bash</item>
		<item>Improved Sunder</item>
		<item>Improved Trip</item>
		<item>Improved Two-Weapon Fighting</item>
		<item>Improved Unarmed Strike</item>
		<item>Improved Vital Strike</item>
		<item>Improvised Weapon Mastery</item>
		<item>Intimidating Prowess</item>
		<item>Iron Will</item>
		<item>Leadership</item>
		<item>Lightning Reflexes</item>
		<item>Lightning Stance</item>
		<item>Lunge</item>
		<item>Magical Aptitude</item>
		<item>Manyshot</item>
		<item>Martial Weapon Proficiency</item>
		<item>Master Craftsman</item>
		<item>Maximize Spell</item>
		<item>Medusa\'s Wrath</item>
		<item>Mobility</item>
		<item>Mounted Archery</item>
		<item>Mounted Combat</item>
		<item>Natural Spell</item>
		<item>Nimble Moves</item>
		<item>Penetrating Strike</item>
		<item>Persuasive</item>
		<item>Pinpoint Targeting</item>
		<item>Point-Blank Shot</item>
		<item>Power Attack</item>
		<item>Precise Shot</item>
		<item>Quick Draw</item>
		<item>Quicken Spell</item>
		<item>Rapid Reload</item>
		<item>Rapid Shot</item>
		<item>Ride-By Attack</item>
		<item>Run</item>
		<item>Scorpion Style</item>
		<item>Scribe Scroll</item>
		<item>Selective Channeling</item>
		<item>Self-Sufficient</item>
		<item>Shatter Defenses</item>
		<item>Shield Focus</item>
		<item>Shield Proficiency</item>
		<item>Shield Slam</item>
		<item>Shot on the Run</item>
		<item>Sickening Critical</item>
		<item>Silent Spell</item>
		<item>Simple Weapon Proficiency</item>
		<item>Skill Focus</item>
		<item>Snatch Arrows</item>
		<item>Spell Focus</item>
		<item>Spell Mastery</item>
		<item>Spell Penetration</item>
		<item>Spellbreaker</item>
		<item>Spirited Charge</item>
		<item>Spring Attack</item>
		<item>Staggering Critical</item>
		<item>Stand Still</item>
		<item>Stealthy</item>
		<item>Step Up</item>
		<item>Still Spell</item>
		<item>Strike Back</item>
		<item>Stunning Critical</item>
		<item>Stunning Fist</item>
		<item>Throw Anything</item>
		<item>Tiring Critical</item>
		<item>Toughness</item>
		<item>Tower Shield Proficiency</item>
		<item>Trample</item>
		<item>Turn Undead</item>
		<item>Two-Weapon Defense</item>
		<item>Two-Weapon Fighting</item>
		<item>Two-Weapon Rend</item>
		<item>Unseat</item>
		<item>Vital Strike</item>
		<item>Weapon Finesse</item>
		<item>Weapon Focus</item>
		<item>Weapon Specialization</item>
		<item>Whirlwind Attack</item>
		<item>Widen Spell</item>
		<item>Wind Stance</item>
    </string-array>
    <string name="hint_item_name">Name</string>
    <string name="hint_item_description">Description</string>
    <string name="hint_item_weight">Weight</string>
    <string name="hint_item_value">Value</string>
    <string name="hint_item_amount">Amount</string>
    <string name="damage">Damage</string>
    <string name="criticalmulti">Multi</string>
    <string name="damagetype">Damage type</string>
    <string name="armorclass">AC</string>
    <string name="maxdex">MaxDex</string>
    <string name="acpenalty">penalty</string>
</resources>