<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
	android:layout_height="wrap_content" >
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:minWidth="1000dp"
	    android:id="@+id/create_item_layout" >
	
	    <EditText
	        android:id="@+id/create_item_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPersonName|textCapWords" 
	        android:hint="@string/hint_item_name" />
	    
	    <EditText
	        android:id="@+id/create_item_description"
	        android:gravity="top|left"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:lines="3"
	        android:ems="10"
	        android:inputType="textMultiLine" 
	        android:scrollHorizontally="false"
	        android:hint="@string/hint_item_description" />

	    <LinearLayout
	        android:orientation="horizontal" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:weightSum="0.9" >
	        
	       	<EditText
		        android:id="@+id/create_item_weight"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.3"
		        android:ems="10"
		        android:inputType="numberDecimal"
		        android:hint="@string/hint_item_weight"  />
	       	
	       	<EditText
		        android:id="@+id/create_item_value"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.3"
		        android:ems="10"
		        android:inputType="number"
		        android:hint="@string/hint_item_value"  />
	       	
	       	<EditText
		        android:id="@+id/create_item_amount"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.3"
		        android:ems="10"
		        android:inputType="number"
		        android:hint="@string/hint_item_amount"  />
	        
	    </LinearLayout>
	    
	    <Spinner
	        android:id="@+id/create_item_slot"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	    
	    <LinearLayout
	        android:id="@+id/create_item_weapon"
	        android:orientation="vertical" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:visibility="gone" >
	       	
			<LinearLayout
		        android:orientation="horizontal" 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:weightSum="0.9" >
	        
				<EditText
					android:id="@+id/create_weapon_damage"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="0.3"
					android:ems="10"
					android:hint="@string/damage" />
				
				<Spinner
					android:id="@+id/create_weapon_critrange"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="0.3"
					android:entries="@array/ar_critrange" />
					
				<EditText
					android:id="@+id/create_weapon_critmulti"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="0.3"
					android:ems="10"
					android:inputType="number"
					android:hint="@string/criticalmulti" />
	        </LinearLayout>
	        
			<Spinner
		        android:id="@+id/create_weapon_handedness"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
			
			<EditText
				android:id="@+id/create_weapon_damagetype"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/damagetype" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/create_item_armor"
	        android:orientation="horizontal" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	        android:weightSum="1.2" >
	       	
			<EditText
				android:id="@+id/create_armor_ac"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="0.3"
				android:ems="10"
				android:inputType="number"
				android:hint="@string/armorclass" />
			
			<EditText
				android:id="@+id/create_armor_maxdex"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="0.3"
				android:ems="10"
				android:inputType="number"
				android:hint="@string/maxdex" />
				
			<EditText
				android:id="@+id/create_armor_penalty"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="0.3"
				android:ems="10"
				android:inputType="numberSigned"
				android:hint="@string/acpenalty" />

            <Spinner
                android:id="@+id/create_armor_type"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

	    </LinearLayout>
	    
	    <LinearLayout
	        android:orientation="horizontal" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:weightSum="1.0" >
	       	
	        <Spinner
		        android:id="@+id/create_item_effecttype"
		        android:layout_width="0dip"
	        	android:layout_weight="0.7"
		        android:layout_height="wrap_content" />
	        
	        <EditText
		        android:id="@+id/create_item_effectvalue"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.3"
		        android:ems="10"
		        android:inputType="number" />
	       	
	    </LinearLayout>
	
	    <LinearLayout
	        android:orientation="horizontal" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:weightSum="1.0" >
	
	        <Button
	            android:id="@+id/create_item_create"
	            android:layout_height="wrap_content"
	            android:text="@string/create" 
	            android:layout_weight=".5"
	  			android:layout_width="0dip"/>
	
	        <Button
	            android:id="@+id/create_item_cancel"
	            android:layout_height="wrap_content"
	            android:text="@string/cancel"
	            android:layout_weight=".5"
	  			android:layout_width="0dip" />
	
	    </LinearLayout>
	
	</LinearLayout>
</ScrollView>