<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent" >
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:id="@+id/attribute_layout" 
	    android:weightSum="1.0" 
	    android:gravity="top">
	
	    <TextView
	        android:id="@+id/attr_header_ability"
	        android:layout_width="0dip"
	        android:layout_height="50dp"
	        android:layout_gravity="center"
	        android:layout_weight=".2"
	        android:gravity="center"
	        android:text="@string/header_1"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/attr_header_score"
	        android:layout_width="0dip"
	        android:layout_height="50dp"
	        android:layout_gravity="center"
	        android:layout_weight=".2"
	        android:gravity="center"
	        android:text="@string/header_2"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/attr_header_bonus"
	        android:layout_width="0dip"
	        android:layout_height="50dp"
	        android:layout_gravity="center"
	        android:layout_weight=".2"
	        android:gravity="center"
	        android:text="@string/header_3"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/attr_header_temp_score"
	        android:layout_width="0dip"
	        android:layout_height="50dp"
	        android:layout_gravity="center"
	        android:layout_weight=".2"
	        android:gravity="center"
	        android:text="@string/header_4"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/attr_header_temp_bonus"
	        android:layout_width="0dip"
	        android:layout_height="50dp"
	        android:layout_gravity="center"
	        android:layout_weight=".2"
	        android:gravity="center"
	        android:text="@string/header_5"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	</LinearLayout>
	
    <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray"/>
	
    <ListView
        android:id="@+id/attribute_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="start"
        android:choiceMode="none"
        android:clickable="false"
        android:divider="#444"
        android:dividerHeight="2dp"
        android:longClickable="false" />
 
</LinearLayout>
