<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:background="#00000000"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin" >
    	
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="1.0" >
		    
	         <TextView
		        android:layout_height="30dp"
				android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".6"
		        android:text="@string/ov_level"
		  		android:layout_width="0dip" />
	         
	         <TextView
				android:id="@+id/calc_level" 
	            android:layout_height="30dp"
				android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".4"
		  		android:layout_width="0dip"
	           	/>
		</LinearLayout>
    	
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="1.0" >
		    
	         <TextView
		        android:layout_height="30dp"
				android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".6"
		        android:text="@string/ov_xp"
		  		android:layout_width="0dip" />
	         
	         <TextView
				android:id="@+id/calc_xp" 
	            android:layout_height="30dp"
				android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".4"
		  		android:layout_width="0dip"
	           	/>
		</LinearLayout>
	    
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="1.0" >
		    
	         <TextView
		        android:layout_height="30dp"
				android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".6"
		        android:text="@string/ov_hp"
		  		android:layout_width="0dip" />
	         
	         <net.mindsoup.charactersoup.CalculationView
				android:id="@+id/calc_hitpoints" 
	            android:layout_height="30dp"
				android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".4"
		  		android:layout_width="0dip"
	           	/>
		</LinearLayout>
		
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="1.0" >
		    
	         <TextView
		        android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".6"
		        android:text="@string/ov_ac"
		  		android:layout_width="0dip" />
	         
	         <net.mindsoup.charactersoup.CalculationView
				android:id="@+id/calc_ac" 
	            android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".4"
		  		android:layout_width="0dip"
	           	/>
		</LinearLayout>
		
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="1.0" >
		    
	         <TextView
		        android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".6"
		        android:text="@string/ov_mab"
		  		android:layout_width="0dip" />
	         
	         <net.mindsoup.charactersoup.CalculationView
				android:id="@+id/calc_mab0" 
	            android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".1"
		  		android:layout_width="0dip"
	           	/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#666"
                />

            <net.mindsoup.charactersoup.CalculationView
                android:id="@+id/calc_mab1"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight=".1"
                android:layout_width="0dip"
                />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#666"
                />

            <net.mindsoup.charactersoup.CalculationView
                android:id="@+id/calc_mab2"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight=".1"
                android:layout_width="0dip"
                />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#666"
                />

            <net.mindsoup.charactersoup.CalculationView
                android:id="@+id/calc_mab3"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight=".1"
                android:layout_width="0dip"
                />
            
		</LinearLayout>
		
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="1.0" >
		    
	         <TextView
		        android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".6"
		        android:text="@string/ov_rab"
		  		android:layout_width="0dip" />
	         
	         <net.mindsoup.charactersoup.CalculationView
				android:id="@+id/calc_rab" 
	            android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".4"
		  		android:layout_width="0dip"
	           	/>
		</LinearLayout>
		
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="1.0" >
		    
	         <TextView
		        android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".6"
		        android:text="@string/ov_cmb"
		  		android:layout_width="0dip" />
	         
	         <net.mindsoup.charactersoup.CalculationView
				android:id="@+id/calc_cmb" 
	            android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".4"
		  		android:layout_width="0dip"
	           	/>
		</LinearLayout>
		
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="1.0" >
		    
	         <TextView
		        android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".6"
		        android:text="@string/ov_cmd"
		  		android:layout_width="0dip" />
	         
	         <net.mindsoup.charactersoup.CalculationView
				android:id="@+id/calc_cmd" 
	            android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".4"
		  		android:layout_width="0dip"
	           	/>
		</LinearLayout>
		
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="1.0" >
		    
	         <TextView
		        android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".6"
		        android:text="@string/ov_fort_save"
		  		android:layout_width="0dip" />
	         
	         <net.mindsoup.charactersoup.CalculationView
				android:id="@+id/calc_fort_save" 
	            android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".4"
		  		android:layout_width="0dip"
	           	/>
		</LinearLayout>
		
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="1.0" >
		    
	         <TextView
		        android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".6"
		        android:text="@string/ov_ref_save"
		  		android:layout_width="0dip" />
	         
	         <net.mindsoup.charactersoup.CalculationView
				android:id="@+id/calc_ref_save" 
	            android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".4"
		  		android:layout_width="0dip"
	           	/>
		</LinearLayout>
		
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="1.0" >
		    
	         <TextView
		        android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".6"
		        android:text="@string/ov_will_save"
		  		android:layout_width="0dip" />
	         
	         <net.mindsoup.charactersoup.CalculationView
				android:id="@+id/calc_will_save" 
	            android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".4"
		  		android:layout_width="0dip"
	           	/>
		</LinearLayout>
		
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:weightSum="1.0" >
		    
	         <TextView
		        android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".6"
		        android:text="@string/ov_initiative"
		  		android:layout_width="0dip" />
	         
	         <net.mindsoup.charactersoup.CalculationView
				android:id="@+id/calc_initiative" 
	            android:layout_height="30dp"
		        android:layout_gravity="center_vertical"
		        android:gravity="center_vertical"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_weight=".4"
		  		android:layout_width="0dip"
	           	/>
		</LinearLayout>
	    
	    <TextView
	        android:id="@+id/overview_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="" />
	</LinearLayout>
</ScrollView>